--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>卒業制作練習| 48期10月生</title>
 
     <!--css-->
-    <link href="./css/reset.css" rel="stylesheet">
-    <link href="./css/vegas.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="reset.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 
@@ -19,7 +18,7 @@
 <body>
     <header>
         <h1 class="main_img">
-            <img src="img/名称未設定-3.png" alt="">
+            <img src="名称未設定-3.png" alt="">
         </h1>
         <nav>
             <ul>
@@ -27,8 +26,8 @@
                 <li><a href="#">出店リスト</a></li>
                 <li><a href="#">開催イベント</a></li>
                 <li><a href="#">アクセス</a></li>
-                <!-- <li><a href="#"><img src="img/icons8-ツイッターx-24.png" alt="webstreet" class="footer_logo"></a></li>
-                <li><a href="#"><img src="img/icons8-インスタ-30.png" alt="webstreet" class="footer_logo" ></a></li> -->
+                <!-- <li><a href="#"><img src="icons8-ツイッターx-24.png" alt="webstreet" class="footer_logo"></a></li>
+                <li><a href="#"><img src="icons8-インスタ-30.png" alt="webstreet" class="footer_logo" ></a></li> -->
                 <li><a href="#">X</a></li>
                 <li><a href="#">Instagram</a></li>
                 
@@ -46,7 +45,7 @@
 
     <main>
         <div class="main_visual">
-            <img src="img/名称未設定-5.jpg" alt="俺の生きる道" class="list_img">
+            <img src="名称未設定-5.jpg" alt="俺の生きる道" class="list_img">
         </div>
         <div class="event_outline">
             <div class="wrapper">
@@ -106,10 +105,40 @@
                     <div class="shop_list_inner">
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <div class="list_caption">
+                                <h3>in EZO 本店</h3>
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
+                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
+                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
+                            </div><!--END .list_caption-->
+                        </div><!--END .shop_list_item-->
+
+                        <div class="shop_list_item">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <div class="list_caption">
+                                <h3>in EZO 本店</h3>
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
+                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
+                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
+                            </div><!--END .list_caption-->
+                        </div><!--END .shop_list_item-->
+
+                        <div class="shop_list_item">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EZO 本店</h3>
                                 <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
+                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
+                            </div><!--END .list_caption-->
+                        </div><!--END .shop_list_item-->
+
+                        <div class="shop_list_item">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <div class="list_caption">
+                                <h3>in EZO 本店</h3>
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
@@ -126,40 +155,10 @@
                         </div><!--END .shop_list_item-->
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EZO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
-                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
-                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
-                            </div><!--END .list_caption-->
-                        </div><!--END .shop_list_item-->
-
-                        <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
-                            <div class="list_caption">
-                                <h3>in EZO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
-                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
-                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
-                            </div><!--END .list_caption-->
-                        </div><!--END .shop_list_item-->
-
-                        <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
-                            <div class="list_caption">
-                                <h3>in EZO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
-                                <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
-                                <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
-                            </div><!--END .list_caption-->
-                        </div><!--END .shop_list_item-->
-
-                        <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
-                            <div class="list_caption">
-                                <h3>in EZO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
@@ -174,30 +173,30 @@
                     <div class="shop_list_inner">
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EDO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
                         </div><!--END .shop_list_item-->
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EDO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
                         </div><!--END .shop_list_item-->
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EDO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
@@ -244,15 +243,15 @@
         <div class="footer_inner">
             <div class="footer_logo_area">
                 <a href="index.html">
-                    <img src="img/名称未設定-6.png" alt="webstreet" class="footer_logo">
+                    <img src="名称未設定-6.png" alt="webstreet" class="footer_logo">
                     <!-- <span class="footer_yago">WEBSTREET</span> -->
                 </a>
             </div><!--END .footer_logo_area-->
 
             <div class="sns_logo_area">
                 <a href="index.html">
-                    <img src="img/icons8-ツイッターx-30.jpg" alt="webstreet" class="footer_logo">
-                    <img src="img/icons8-instagram-50.jpg" alt="webstreet" class="footer_logo">
+                    <img src="icons8-ツイッターx-30.jpg" alt="webstreet" class="footer_logo">
+                    <img src="icons8-instagram-50.jpg" alt="webstreet" class="footer_logo">
                     <!-- <span class="footer_yago">WEBSTREET</span> -->
                 </a>
             </div><!--END .footer_logo_area-->
@@ -273,9 +272,8 @@
 
 
     <!--js-->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/vegas.js"></script>
-    <script src="js/function.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="function.js"></script>
 
     <script>
   const backToTopButton = document.querySelector('.back-to-top');
