--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EZO 本店</h3>
-                                <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
+                                <img src="01_inezo_img.jpg" alt="in EZO 本店">
                                 <p class="list_caption_title">札幌芳醇炙りじゃが白湯味噌</p>
                                 <p class="list_caption_txt">炙り豚バラが特徴！ジャガイモ使用の濃厚ヘルシー味噌×特注麺</p>
                             </div><!--END .list_caption-->
@@ -145,7 +145,7 @@
                         </div><!--END .shop_list_item-->
 
                         <div class="shop_list_item">
-                            <img src="img/01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
+                            <img src="01_inezo_logo.svg" alt="in EZO 本店" class="list_img">
                             <div class="list_caption">
                                 <h3>in EZO 本店</h3>
                                 <img src="img/01_inezo_img.jpg" alt="in EZO 本店">
