--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>卒業制作練習| 48期10月生</title>
 
     <!--css-->
-    <link href="./css/reset.css" rel="stylesheet">
-    <link href="./css/vegas.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="reset.css" rel="stylesheet">
+    <link href="vegas.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 
